fix letter spacing
remove weird spacing from "lab 4"
issue #10

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -18,7 +18,7 @@
 /* for modifying whatever is around text in top left of side navbar */
 body .md-subhead {
     font-size: 32px;
-
+    letter-spacing: normal;
 }
 
 /* this is for modifying whats behind the navbar..
